init: Report valid verified boot for SafetyNet checks
Squash of:

commit 9dcc820711b652e5bab53306cac8bc064b56e9a5
Author: Alex Naidis <alex.naidis@linux.com>
Date:   Sun Apr 9 01:29:27 2017 +0200

    init: Weaken property override security for the init extension

    Sometimes we need to override ro.* properties by using our vendor init
    extension.

    Previously there was a security check which was blocking that.
    To resolve the issue, we need to weaken the security check during the
    execution of our vendor init extension.

    This is safe because the vendor init extension gets executed as part of init
    construction and it is considered a trusted system component.

    Change-Id: Ia7d60686968695f1fb43be4ed58770ce10da88c5

    Former-commit-id: 91d12168b9500a44211a7d5a092e0ebcfed48d4d
    Signed-off-by: Anushek Prasal <anushekprasal@gmail.com>
    Change-Id: I19a6f35c33f1d5d5798cb4069295998f87bcbc9c

commit ea543327e6269b27492fd314426b9eeae4ac7ee6
Author: Danny Lin <danny@kdrag0n.dev>
Date:   Wed Oct 7 00:24:54 2020 -0700

    init: Report valid verified boot for SafetyNet checks

    Google's SafetyNet attestation includes checks for the integrity of the
    verified boot chain, as reported by some ro.boot.* properties normally
    passed by the bootloader. Unconditionally reporting successful, valid
    values helps pass SafetyNet checks, as long as other system state is
    intact.

    However, the real prop values must be retained in recovery/fastbootd in
    order for fastbootd to allow/deny flashing correctly based on the
    bootloader lock state. This is accomplished by checking androidboot keys
    in the kernel cmdline and bootconfig (necessary on Pixel 6), and not
    spoofing anything if the boot isn't a normal full-blown Android boot.

    Change-Id: I66d23fd91d82906b00d5eb020668f01ae83ec31f
    Signed-off-by: spezi77 <spezi7713@gmx.net>

commit 38a6acc762ebd368ffd613449087a7365d403452
Author: jhenrique09 <jhenrique09.mcz@hotmail.com>
Da

--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -1329,3 +1329,8 @@ on property:persist.device_config.mglru_native.lru_gen_config=core_and_nonleaf_y
   write /sys/kernel/mm/lru_gen/enabled 5
 on property:persist.device_config.mglru_native.lru_gen_config=all
   write /sys/kernel/mm/lru_gen/enabled 7
+
+on property:sys.boot_completed=1
+    # Restrict permissions to socket file
+    # to hide Magisk & co.
+    chmod 440 /proc/net/unix
